QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Regression from QSystemTrayIcon (Qt4 >= 4.2) implementation, at
  least on X11 environments: while the main application widget was
  minimized to the system-tray, closing any other top-level widget
  was causing the immediate and unexpected application shutdown.

- Some portaudio backend settings are now being enabled, specially
  suited for the jackdmp flavouring.

- Server mode display blinking, usually shown as the RT indicator,
  is now an option (Setup/Display/Blink server mode indicator when
  started). 

- Tool/child windows position and size preservation fixed.

- The connections/patchbay auto-refresh option has been finally
  removed due to several user requests, although deprecated for
  quite some time now it has been the probable cause of some
  periodic xrun occurrences due to graph-locking in jackd (while
  making Geoff Beasley angry in the process:).

- Messages line limit was not being checked, now honored.

- Simple as it could ever be, the build executive summary report
  is now given on configure.

- Patchbay snapshot not gets socket and port ordering back.

- ALSA Sequencer support is now an optional feature on setup,
  preventing the annoying "MIDI patchbay will be not available"
  warning message, ruining window placement on Linux systems
  where the snd-midi-seq kernel module is not loaded or not
  favorable (eg. OSS) at startup (by request from Jussi Laako).

- Get configure to try and detect the correct qmake location and
  insert it the search order, so let the qt4 tools take precedence
  when --with-qt option is given and older qt3 ones coexist and
  are found located ahead in the PATH.

- The connections widget is now being properly refreshed, due to
  some quirk in the QTreeWidget which was preventing some items,
  specially the expanded ones, to disappear in the void. Meanwhile,