@@ -115,19 +115,19 @@ and in fair and strict alphabetic order:
     Ben Powers                          Lawrie Abbott
     Chris Cannam                        Lee Revell
     Dan Nigrin                          Lucas Brasilino
-    Dave Phillips                       Mark Knecht
-    Dirk Jagdmann                       Matthias Nagorni
-    Dominic Sacre                       Melanie
-    Fernando Pablo Lopez-Lezcano        Orm Finnendahl
-    Filipe Tomas                        Paul Davis
-    Florian Schmidt                     Robert Jonsson
-    Fons Adriaensen                     Sampo Savolainen
-    Geoff Beasley                       Stephane Letz
-    Jack O'Quin                         Steve Harris
-    Jesse Chappell                      Taybin Rutkin
-    Joachim Deguara                     Wilfried Huss
-    Jussi Laako                         Wolfgang Woehl
-    Karsten Wiese
+    Dave Phillips                       Marc-Olivier Barre
+    Dirk Jagdmann                       Mark Knecht
+    Dominic Sacre                       Matthias Nagorni
+    Fernando Pablo Lopez-Lezcano        Melanie
+    Filipe Tomas                        Orm Finnendahl
+    Florian Schmidt                     Paul Davis
+    Fons Adriaensen                     Robert Jonsson
+    Geoff Beasley                       Sampo Savolainen
+    Jack O'Quin                         Stephane Letz
+    Jesse Chappell                      Steve Harris
+    Joachim Deguara                     Taybin Rutkin
+    Jussi Laako                         Wilfried Huss
+    Karsten Wiese                       Wolfgang Woehl
 
 
 Thanks to you all.
